# ninja-shadowdash-nyu

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  commands.md  test1
.circleci/: config.yml
converter/: run-tests.sh
converter/archive/: convert.py
converter/docs/: build.ninja  build.ninja.cc
converter/src/: README.md  __init__.py  builder.py  converter.py  hooks.cpp  main.cpp  main.py  manifest.h  parser.py  token.py
converter/test-zlib/: compile.sh  output.cc
converter/testing/: build.ninja  build.ninja.cc  build.sh  hello.cpp  manifest_example.cc  zlib.build.ninja
converter/tests/: conftest.py  (+4 more)
convertor/: bench.py  convertor.py
hello_world_graph/: hello.cc  hello_world_graph_test.sh
misc/: output_test.py
new-graph/: CMakeLists.txt  easybuild.sh  simulate-ninja-graph.cc
new-language/: bar.cpp  bar.h  baz.cpp  foo.cpp  main.cpp  manifest.h
shadowdash_docs/: hello_world_graph_docs.md  new_langauge_doc.md
shadowdash_test/: manifest.cc  manifest.h  manifest_compile.sh  manifest_example.cc
src/: getopt.h  manifest_parser.cc  manifest_parser.h  ninja.cc  ninja.h  shadowdash_build.cc  shadowdash_manifest.h  shadowdash_manifest_backup.h  string_piece.h  test1.cc  util.cc  util.h
src/converter/converter/: CMakeLists.txt  Makefile  run_tests.sh
src/converter/converter/include/lexer/: lexer.hpp  token.hpp  token_types.hpp
src/converter/converter/include/parser/: parser.hpp
src/converter/converter/src/: lexer.cpp  main.cpp
src/converter/converter/src/lexer/: lexer.cpp  token.cpp
src/converter/converter/src/parser/: parser.cpp
src/converter/converter/test/: CMakeLists.txt  build_elements_test.cpp  lexer_test.cpp  parser_test.cpp  token_test.cpp
(+24 files in other folders)
